--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "path-to-regexp": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
