--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
-    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query": "^5.61.3",
     "axios": "^1.7.7",
     "install": "^0.13.0",
     "npm": "^10.9.0",
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "sass-embedded": "^1.81.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
