--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm": "^10.9.0",
     "path-to-regexp": "^8.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
